Fix #6 cut off error messages

--- a/XConnectHelper/sitecore modules/Web/xConnectHelper/xConnectHelper.css
+++ b/XConnectHelper/sitecore modules/Web/xConnectHelper/xConnectHelper.css
@@ -41,3 +41,7 @@ table {
     border: 1px solid transparent;
     border-radius: .25rem;
 }
+
+.auto-scroll {
+    overflow: auto;
+}
